--- a/EatingPlanner/src/main/resources/application.properties
+++ b/EatingPlanner/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/eating_planner
 spring.datasource.username=root
 spring.datasource.password=root123
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+image.store.directory=C:\\dev\\EatingPlanner - project\\EatingPlanner\\EatingPlanner\\src\\main\\resources\\static\\images
