--- a/EatingPlanner/src/main/resources/application.properties
+++ b/EatingPlanner/src/main/resources/application.properties
@@ -1,7 +1,6 @@
+spring.profiles.active=dev
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/eating_planner
-spring.datasource.username=root
-spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
 spring.servlet.multipart.max-file-size=5MB
